--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.6.2",
     "@ramonak/react-progress-bar": "^4.4.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -18,6 +21,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.8.0",
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^6.3.0",
