--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.1",
     "babel-jest": "^26.6.3",
     "bootstrap": "^5.1.3",
+    "lightweight-charts": "^3.8.0",
     "query-string": "^7.1.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.3.1",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.7.3",
+    "redux": "^4.2.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
