--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.8.0",
     "react-particles-js": "^3.4.1",
     "react-redux": "^8.0.1",
