--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.27.1",
     "babel-jest": "^26.6.3",
     "bootstrap": "^5.1.3",
+    "device-detector-js": "^3.0.3",
+    "is-ip": "^4.0.0",
     "lightweight-charts": "^3.8.0",
     "query-string": "^7.1.1",
     "react": "^17.0.1",
