--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.7.3",
     "redux": "^4.2.0",
+    "speakeasy": "^2.0.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
