--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.7.3",
+    "react-tradingview-embed": "^3.0.6",
+    "react-tradingview-widget": "^1.3.2",
     "redux": "^4.2.0",
     "speakeasy": "^2.0.0",
     "sweetalert": "^2.1.2",
