--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.7.3",
+    "react-super-responsive-table": "^5.2.0",
     "react-tradingview-embed": "^3.0.6",
     "react-tradingview-widget": "^1.3.2",
     "redux": "^4.2.0",
