--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "query-string": "^7.1.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.3.1",
+    "react-compound-slider": "^3.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.1",
