--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-loader-spinner": "^6.0.0-0",
     "react-multi-carousel": "^2.8.0",
     "react-notifications": "^1.7.3",
+    "react-paginate": "^8.1.3",
     "react-particles-js": "^3.4.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
