--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "socket.io-client": "^4.5.0",
     "speakeasy": "^2.0.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.17",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
