--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-js-pagination": "^3.0.3",
     "react-loader-spinner": "^6.0.0-0",
     "react-multi-carousel": "^2.8.0",
     "react-notifications": "^1.7.3",
