--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.1",
     "babel-jest": "^26.6.3",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "device-detector-js": "^3.0.3",
     "is-ip": "^4.0.0",
     "jquery": "^3.6.0",
@@ -18,6 +19,7 @@
     "query-string": "^7.1.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.3.1",
+    "react-chartjs-2": "^4.1.0",
     "react-compound-slider": "^3.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.2",
