--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.3.1",
     "react-js-pagination": "^3.0.3",
     "react-loader-spinner": "^6.0.0-0",
+    "react-loading-overlay": "^1.0.1",
     "react-multi-carousel": "^2.8.0",
     "react-notifications": "^1.7.3",
     "react-paginate": "^8.1.3",
