--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-tooltip": "^4.2.21",
     "react-tradingview-embed": "^3.0.6",
     "react-tradingview-widget": "^1.3.2",
+    "react-web-share": "^1.1.6",
     "redux": "^4.2.0",
     "socket.io-client": "^4.5.0",
     "speakeasy": "^2.0.0",
