--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "device-detector-js": "^3.0.3",
     "is-ip": "^4.0.0",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "lightweight-charts": "^3.8.0",
     "query-string": "^7.1.1",
     "react": "^17.0.1",
