--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-tradingview-widget": "^1.3.2",
     "react-web-share": "^1.1.6",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.5.0",
     "speakeasy": "^2.0.0",
     "sweetalert": "^2.1.2",
