--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
     "device-detector-js": "^3.0.3",
+    "i": "^0.3.7",
     "is-ip": "^4.0.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "lightweight-charts": "^3.8.0",
     "multicoin-address-validator": "^0.5.10",
+    "npm": "^8.13.2",
     "query-string": "^7.1.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.3.1",
@@ -36,6 +38,7 @@
     "react-paginate": "^8.1.3",
     "react-particles-js": "^3.4.1",
     "react-redux": "^8.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.7.3",
