--- a/analog_user_panel/package.json
+++ b/analog_user_panel/package.json
@@ -12,6 +12,7 @@
     "babel-jest": "^26.6.3",
     "bootstrap": "^5.1.3",
     "lightweight-charts": "^3.8.0",
+    "multicoin-address-validator": "^0.5.10",
     "query-string": "^7.1.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.3.1",
