--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
     "device-detector-js": "^3.0.3",
+    "firebase": "^9.9.0",
     "i": "^0.3.7",
     "is-ip": "^4.0.0",
     "jquery": "^3.6.0",
