--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
+    "react-hot-toast": "^2.3.0",
     "react-icons": "^4.3.1",
     "react-js-pagination": "^3.0.3",
     "react-loader-spinner": "^6.0.0-0",
@@ -44,6 +45,7 @@
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.7.3",
     "react-super-responsive-table": "^5.2.0",
+    "react-toastify": "^9.0.7",
     "react-tooltip": "^4.2.21",
     "react-tradingview-embed": "^3.0.6",
     "react-tradingview-widget": "^1.3.2",
