--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-loading-overlay": "^1.0.1",
     "react-multi-carousel": "^2.8.0",
     "react-notifications": "^1.7.3",
+    "react-otp-input": "^2.4.0",
     "react-paginate": "^8.1.3",
     "react-particles-js": "^3.4.1",
     "react-redux": "^8.0.1",
