--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "device-detector-js": "^3.0.3",
     "firebase": "^9.9.0",
     "i": "^0.3.7",
+    "i18next": "^21.8.14",
+    "i18next-http-backend": "^1.4.1",
     "is-ip": "^4.0.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
@@ -33,6 +35,7 @@
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.3.0",
+    "react-i18next": "^11.18.3",
     "react-icons": "^4.3.1",
     "react-js-pagination": "^3.0.3",
     "react-loader-spinner": "^6.0.0-0",
