--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "speakeasy": "^2.0.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.4.17",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
